--- a/windows-broke semi-final.ipynb
+++ b/windows-broke semi-final.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:43:18.488394Z",
-     "start_time": "2017-05-01T05:43:18.481389Z"
+     "end_time": "2017-05-11T19:07:36.025284Z",
+     "start_time": "2017-05-11T19:07:31.123203Z"
     },
     "collapsed": true
    },
@@ -25,12 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:43:41.829558Z",
-     "start_time": "2017-05-01T05:43:18.490395Z"
-    }
+     "end_time": "2017-05-11T19:07:59.167495Z",
+     "start_time": "2017-05-11T19:07:36.026281Z"
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -43,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:45:56.059362Z",
-     "start_time": "2017-05-01T05:43:41.831047Z"
+     "end_time": "2017-05-11T19:10:14.021270Z",
+     "start_time": "2017-05-11T19:07:59.169492Z"
     },
     "collapsed": true
    },
@@ -62,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:46:00.722241Z",
-     "start_time": "2017-05-01T05:45:56.060865Z"
+     "end_time": "2017-05-11T19:28:21.713154Z",
+     "start_time": "2017-05-11T19:28:17.008560Z"
     },
     "collapsed": true
    },
@@ -78,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:46:00.818812Z",
-     "start_time": "2017-05-01T05:46:00.724232Z"
+     "end_time": "2017-05-11T19:28:34.470530Z",
+     "start_time": "2017-05-11T19:28:34.373471Z"
     },
     "collapsed": true
    },
@@ -99,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:46:00.909385Z",
-     "start_time": "2017-05-01T05:46:00.820313Z"
+     "end_time": "2017-05-11T19:28:36.913044Z",
+     "start_time": "2017-05-11T19:28:36.804953Z"
     },
     "collapsed": true
    },
@@ -114,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:46:08.605707Z",
-     "start_time": "2017-05-01T05:46:00.911387Z"
+     "end_time": "2017-05-11T19:32:05.719829Z",
+     "start_time": "2017-05-11T19:31:58.419976Z"
     },
     "collapsed": true
    },
@@ -137,11 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:46:08.802343Z",
-     "start_time": "2017-05-01T05:46:08.607673Z"
+     "end_time": "2017-05-01T15:36:03.042959Z",
+     "start_time": "2017-05-01T15:36:02.826890Z"
     },
     "collapsed": true
    },
@@ -152,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:46:12.730213Z",
-     "start_time": "2017-05-01T05:46:08.803333Z"
+     "end_time": "2017-05-01T15:36:07.035275Z",
+     "start_time": "2017-05-01T15:36:03.044472Z"
     },
     "collapsed": true
    },
@@ -170,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-01T05:46:19.205269Z",
-     "start_time": "2017-05-01T05:46:12.732716Z"
+     "end_time": "2017-05-01T15:36:13.283947Z",
+     "start_time": "2017-05-01T15:36:07.037277Z"
     },
     "collapsed": true
    },
@@ -198,7 +199,8 @@
     "ExecuteTime": {
      "end_time": "2017-05-01T06:16:41.358607Z",
      "start_time": "2017-05-01T06:16:40.174776Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -230,6 +232,7 @@
      "end_time": "2017-05-01T06:20:27.341825Z",
      "start_time": "2017-05-01T06:20:12.550653Z"
     },
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -252,6 +255,93 @@
     "_=ax.set_xticklabels(xtl)\n",
     "fig.subplots_adjust(right=0.8)\n",
     "plt.savefig('complaints311categories.png', format='png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-01T15:39:34.474852Z",
+     "start_time": "2017-05-01T15:39:33.991583Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                Construction\n",
+       "1                  Fire Safety Director - F58\n",
+       "3                  Fire Safety Director - F58\n",
+       "4                             PAINT - PLASTER\n",
+       "5                                    Drinking\n",
+       "6                             PAINT - PLASTER\n",
+       "7                         Illegal Tree Damage\n",
+       "8                            New Tree Request\n",
+       "9                             PAINT - PLASTER\n",
+       "11                            PAINT - PLASTER\n",
+       "12                            PAINT - PLASTER\n",
+       "13                           Street Condition\n",
+       "14                            PAINT - PLASTER\n",
+       "15                            PAINT - PLASTER\n",
+       "16          Missed Collection (All Materials)\n",
+       "17                            PAINT - PLASTER\n",
+       "18              Root/Sewer/Sidewalk Condition\n",
+       "19              Root/Sewer/Sidewalk Condition\n",
+       "21              Root/Sewer/Sidewalk Condition\n",
+       "22              Root/Sewer/Sidewalk Condition\n",
+       "23              Root/Sewer/Sidewalk Condition\n",
+       "24                           Street Condition\n",
+       "25                                    Smoking\n",
+       "26                          Broken Muni Meter\n",
+       "28                          Broken Muni Meter\n",
+       "29                          Broken Muni Meter\n",
+       "30                          Broken Muni Meter\n",
+       "32                         Indoor Air Quality\n",
+       "33                           Street Condition\n",
+       "34                           Street Condition\n",
+       "                          ...                \n",
+       "15086062                     Street Condition\n",
+       "15086065                Street Sign - Missing\n",
+       "15086067                         Construction\n",
+       "15086068                         Construction\n",
+       "15086069                       Standing Water\n",
+       "15086070                         Damaged Tree\n",
+       "15086073                       Standing Water\n",
+       "15086075                     Street Condition\n",
+       "15086076                     Street Condition\n",
+       "15086077                     Street Condition\n",
+       "15086078                     Street Condition\n",
+       "15086079                     Street Condition\n",
+       "15086080                      PAINT - PLASTER\n",
+       "15086081                      PAINT - PLASTER\n",
+       "15086082                      PAINT - PLASTER\n",
+       "15086083                      PAINT - PLASTER\n",
+       "15086084                      PAINT - PLASTER\n",
+       "15086085                      PAINT - PLASTER\n",
+       "15086086                      PAINT - PLASTER\n",
+       "15086087                      PAINT - PLASTER\n",
+       "15086088                      PAINT - PLASTER\n",
+       "15086089                      PAINT - PLASTER\n",
+       "15086090                Street Sign - Damaged\n",
+       "15086091                      PAINT - PLASTER\n",
+       "15086093                      PAINT - PLASTER\n",
+       "15086095                      PAINT - PLASTER\n",
+       "15086096                      PAINT - PLASTER\n",
+       "15086097                         Noise Survey\n",
+       "15086098                      PAINT - PLASTER\n",
+       "15086100                         Construction\n",
+       "Name: Complaint Type, dtype: category\n",
+       "Categories (298, object): [AGENCY, APPLIANCE, ATF, Adopt-A-Basket, ..., Water System, Weatherization, Window Guard, X-Ray Machine/Equipment]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_311['Complaint Type']"
    ]
   },
   {
