fixed color on lasso fit

--- a/windows-broke final-Copy1.ipynb
+++ b/windows-broke final-Copy1.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:35:24.475022Z",
-     "start_time": "2017-05-15T15:35:22.775479Z"
+     "end_time": "2017-05-15T17:16:39.184637Z",
+     "start_time": "2017-05-15T17:16:34.416433Z"
     },
     "collapsed": true
    },
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:35:47.299576Z",
-     "start_time": "2017-05-15T15:35:24.475983Z"
+     "end_time": "2017-05-15T17:17:00.640538Z",
+     "start_time": "2017-05-15T17:16:39.186599Z"
     },
     "collapsed": true
    },
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:37:55.103730Z",
-     "start_time": "2017-05-15T15:35:47.301577Z"
+     "end_time": "2017-05-15T17:19:09.173454Z",
+     "start_time": "2017-05-15T17:17:00.642540Z"
     },
     "collapsed": true
    },
@@ -65,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:37:58.260591Z",
-     "start_time": "2017-05-15T15:37:55.106222Z"
+     "end_time": "2017-05-15T17:19:12.354989Z",
+     "start_time": "2017-05-15T17:19:09.175451Z"
     },
     "collapsed": true
    },
@@ -81,11 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:37:58.357140Z",
-     "start_time": "2017-05-15T15:37:58.263076Z"
+     "end_time": "2017-05-15T17:19:12.443034Z",
+     "start_time": "2017-05-15T17:19:12.356474Z"
     },
     "collapsed": true
    },
@@ -96,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:38:07.438559Z",
-     "start_time": "2017-05-15T15:37:58.358642Z"
+     "end_time": "2017-05-15T17:19:21.566252Z",
+     "start_time": "2017-05-15T17:19:12.445036Z"
     },
     "collapsed": true
    },
@@ -123,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:38:23.869568Z",
-     "start_time": "2017-05-15T15:38:07.440595Z"
+     "end_time": "2017-05-15T17:19:37.483627Z",
+     "start_time": "2017-05-15T17:19:21.567755Z"
     },
     "collapsed": true
    },
@@ -156,11 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:38:25.360572Z",
-     "start_time": "2017-05-15T15:38:23.871570Z"
+     "end_time": "2017-05-15T17:19:38.912594Z",
+     "start_time": "2017-05-15T17:19:37.485629Z"
     }
    },
    "outputs": [
@@ -250,11 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:38:27.120908Z",
-     "start_time": "2017-05-15T15:38:25.362575Z"
+     "end_time": "2017-05-15T17:19:40.654915Z",
+     "start_time": "2017-05-15T17:19:38.914583Z"
     },
     "collapsed": true
    },
@@ -289,11 +289,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:38:27.143885Z",
-     "start_time": "2017-05-15T15:38:27.122870Z"
+     "end_time": "2017-05-15T17:19:40.672934Z",
+     "start_time": "2017-05-15T17:19:40.656931Z"
     }
    },
    "outputs": [
@@ -328,11 +328,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T15:38:27.209931Z",
-     "start_time": "2017-05-15T15:38:27.150392Z"
+     "end_time": "2017-05-15T17:19:40.741985Z",
+     "start_time": "2017-05-15T17:19:40.676937Z"
     },
     "collapsed": true,
     "scrolled": true
@@ -351,12 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T17:01:37.200255Z",
-     "start_time": "2017-05-15T17:01:36.247025Z"
+     "end_time": "2017-05-15T17:19:41.656691Z",
+     "start_time": "2017-05-15T17:19:40.743984Z"
     },
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -419,12 +420,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T16:49:39.146939Z",
-     "start_time": "2017-05-15T16:49:37.437546Z"
-    }
+     "end_time": "2017-05-15T17:19:43.304793Z",
+     "start_time": "2017-05-15T17:19:41.658694Z"
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -504,12 +506,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T16:48:05.309638Z",
-     "start_time": "2017-05-15T16:48:04.128230Z"
+     "end_time": "2017-05-15T17:19:44.454316Z",
+     "start_time": "2017-05-15T17:19:43.306796Z"
     },
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -549,7 +552,7 @@
     "\n",
     "    axs[i].scatter(data_finall_test.index, crime_final_test,  color='black',\n",
     "                  label='Recorded crimes')\n",
-    "    axs[i].plot(data_finall_test.index, regr_all.predict(data_finall_test), color='blue',\n",
+    "    axs[i].plot(data_finall_test.index, regr_all.predict(data_finall_test),\n",
     "             linewidth=3, label='Predited crimes - Lasso\\nw/ full feature set')\n",
     "    \n",
     "    axs[i].set_xlim(data_finall_test.index[0], data_finall_test.index[-1])\n",
